# tcs

./: Cargo.toml  README.md
cli/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: verifier.rs
example/: Cargo.toml  tapedrive.tcs
schema/: Cargo.toml
