[workspace]
resolver = "2"
members = ["schema", "compiler", "cli", "bench", "example"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "TCS (Tape Canonical Serialization) - A schema-based binary serialization format for Tapedrive"
repository = "https://github.com/spool-labs/tcs"
homepage = "https://tape.network"
keywords = ["serialization", "binary", "canonical", "tapedrive", "blockchain"]
categories = ["encoding", "data-structures"]

[workspace.dependencies]
# Local workspace members
tcs-schema = { version = "0.1.1", path = "schema" }
tcs-compiler = { version = "0.1.1", path = "compiler" }

# Third-party crates
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
clap = { version = "4.5", features = ["derive"] }

# Serialization libraries for benchmarking
bcs = "0.1"
serde = { version = "1.0", features = ["derive"] }
wincode = "0.2.5"
wincode-derive = "0.2.3"
postcard = { version = "1.0", features = ["alloc"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
