[package]
name = "tcs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Command-line interface for TCS (Tape Canonical Serialization)"

[[bin]]
name = "tcs"
path = "src/main.rs"

[dependencies]
tcs-compiler.workspace = true
clap.workspace = true
