[package]
name = "tcs-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "Compiler and code generator for TCS (Tape Canonical Serialization)"

[dependencies]
tcs-schema.workspace = true
lazy_static.workspace = true
regex.workspace = true
thiserror.workspace = true
